--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dz-tek",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://gitname.github.io/dz-tek",
+  "homepage": "http://gitname.github.io/dz-tek",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
